--- a/aspnet-get-started/Views/Home/About.cshtml
+++ b/aspnet-get-started/Views/Home/About.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
+<iframe width="866" height="487" src="https://www.youtube.com/embed/WwSyB8yo2XI" title="Match 6 | India vs Pakistan | Match Highlights | DP World Asia Cup 2025" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
